링크 수정 0.01 최종

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <div class="headWrap" ng-show="isCon > 0">
             <ul class="menuList">
                 <li class="menuItems wd40"><a ng-click="isCon = 0" ng-show="isCon < 0">Intro</a></li>
-                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 1}" href="#skWrap" ng-click="goSec(1)">Skill</a></li>
-                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 2}" href="#pfWrap" ng-click="goSec(2)">Portfolio</a></li>
-                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 3}" href="#abWrap" ng-click="goSec(3)">About</a></li>
+                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 1}" ng-click="goSec(1)">Skill</a></li>
+                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 2}" ng-click="goSec(2)">Portfolio</a></li>
+                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 3}" ng-click="goSec(3)">About</a></li>
             </ul>            
         </div>
     </header>
