공유하기 수정
이미지 경로
설명글 수정

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <footer ng-controller="footerArea">
-        <button type="button" id="kakao-link-btn" class="cursp"><img src="/assets/img/kakao_btn_small.png" alt="카카오톡 공유하기"></button>
+        <button type="button" id="kakao-link-btn" class="cursp"><img src="./assets/img/kakao_btn_small.png" alt="카카오톡 공유하기"></button>
         <a href="https://www.youtube.com/watch?v=hYvNB0ucJM8" target="_blank" class="youClr" title="유튜브에서 보기"><i class="fab fa-youtube youClr"></i></a>
         <a href="https://github.com/uitop/ui" target="_blank" class="wClr" title="소스보기"><i class="fab fa-github"></i></a>
     </footer>
