모바일 수정
공유하기 멘트 수정
모바일시 백그라운드 수정
IE8이하버젼 페이지 수정

--- a/ie8.html
+++ b/ie8.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>UIUIUIUI</title>
     <style type="text/css">
-        table{height:100%;width:100%;position:fixed;top:0;left:0;background:url(/assets/img/chrome.jpg) no-repeat 50% 50%;border:0;padding:0;margin:0}
-        td{height:100%;width:100%;vertical-align: middle;text-align: center;color:#444}
-        a{color:#222;font-size:30px}
+        table{height:100%;width:100%;position:fixed;top:0;left:0;background:url(/assets/img/chrome.jpg) no-repeat 50% 50%;border:0;padding:0;margin:0;background-size: cover}
+        td{height:100%;width:100%;vertical-align: middle;text-align: center;color:#333}
+        div{max-width: 600px;margin: 0 auto;padding: 2%;background:#fff;background: rgba(255,255,255,.8);}
+        a{color:#000;font-size:30px}
     </style>
     <script type="text/javascript">
         function isIE () {
@@ -23,10 +24,12 @@
     <table>
         <tr>
             <td>
-                <h3>인터넷 익스플로러 8 이하 버전에서 동작하지 않습니다.</h3>
-                <h3>It does not work with Internet Explorer 8 or earlier.</h3>
-                <h3>Internet Explorer 8以前のバージョンでは動作しません。</h3>
-                <a href="https://www.google.co.kr/chrome/" target="_blank">chrome Download</a>
+                <div>
+                    <h3>인터넷 익스플로러 8 이하 버전에서 동작하지 않습니다.</h3>
+                    <h3>It does not work with Internet Explorer 8 or earlier.</h3>
+                    <h3>Internet Explorer 8以前のバージョンでは動作しません。</h3>
+                    <a href="https://www.google.co.kr/chrome/" target="_blank">chrome Download</a>
+                </div>
             </td>
         </tr>
     </table>
