--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body ng-app="myPortfolio" ng-controller="myPof">
     <div class="video-background">
         <div class="video-foreground">
-            <iframe id="backVdo" src="https://www.youtube.com/embed/hYvNB0ucJM8?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=hYvNB0ucJM8&enablejsapi=1&mute=1" frameborder="0" allowfullscreen></iframe>
+            <iframe id="backVdo" class="isPc" src="https://www.youtube.com/embed/hYvNB0ucJM8?controls=0&showinfo=0&rel=0&enablejsapi=1&mute=1&autoplay=1&loop=1&playlist=hYvNB0ucJM8" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <header>
