--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body ng-app="myPortfolio" ng-controller="myPof">
     <div class="video-background">
         <div class="video-foreground">
-            <iframe id="backVdo" class="isPc" src="https://www.youtube.com/embed/hYvNB0ucJM8?controls=0&showinfo=0&rel=0&enablejsapi=1&mute=1&autoplay=1&loop=1&playlist=hYvNB0ucJM8" frameborder="0" allowfullscreen></iframe>
+            
         </div>
     </div>
     <header>
@@ -53,7 +53,7 @@
             </ul>            
         </div>
     </header>
-    <div class="opDiv">
+    <!-- <div class="opDiv">
         <div class="textDiv wClr" ng-show="isCon == 0">
             <h2 class="thsIsP">이것은 포트폴리오</h2>
             <h2 class="thsIsP">This is a portfolio</h2>
@@ -67,7 +67,7 @@
             <a ng-click="isCon = 1" title="Scroll 형식 레이아웃">Scroll Ver</a>
             <a ng-click="isCon = 2" title="layer tab 형식 레이아웃">Layer Ver</a>
         </div>
-    </div>
+    </div> -->
     <footer ng-controller="footerArea">
         <button type="button" id="kakao-link-btn" class="cursp"><img src="./assets/img/kakao_btn_small.png" alt="카카오톡 공유하기"></button>
         <!-- <a href="https://www.youtube.com/watch?v=hYvNB0ucJM8" target="_blank" class="youClr" title="유튜브에서 보기"><i class="fab fa-youtube youClr"></i></a> -->
@@ -80,23 +80,23 @@
                 <canvas id="radar" class="chart chart-radar" chart-data="data" chart-options="options" chart-labels="labels"></canvas>
             </div>
             <div class="radarWrap isSkTxt">
-                <h2>COMMUNICATION  
-                    <sub>원하는 길이 아니더라도 웃으면서 걷자, 결과를 잘 수용하는 것이 소통의 기본이라고 생각합니다.</sub>
+                <h2>체력  
+                    <sub>취미는 관악산 정상에서 김밥먹기, 주1회 이상 8키로 런닝, 자전거 타기등 꾸준히 건강관리 합니다.</sub>
                 </h2>
-                <h2>FRONTEND  
-                    <sub>javascript로 타임머신을 만들자. react,angularJS,vue 환경을 가리지 않고 들이대겠습니다.</sub>
+                <h2>지구력
+                    <sub>추가요청, 3차 추가요청, final 추가요청, 진짜 마지막 추가요청 끝날때까지 거침없이 작업합니다.</sub>
                 </h2>
-                <h2>UI/UX  
-                    <sub>아무리 프랑스 요리가 맛있다고 해도 한국인 입맛은 한식, 좋은 방향보다 사용자에게 맞는 방향을 생각합니다.</sub>
+                <h2>실력 
+                    <sub>언젠가 javascript로 타임머신을 만들겠다는 각오로 코딩하고, 어떤 요청이던 답을 찾아 냅니다.</sub>
                 </h2>
-                <h2>TOOL
-                    <sub>vsCode, webstorm 개발환경 적응은 기본 포토샵, 오피스, 동영상 편집등 컴퓨터 활용능력이 좋습니다.</sub>
+                <h2>이해력 
+                    <sub>체크박슨데 하나만 선택되게 해주세요 같은 요청이 들어오면 당황하지 않고 라디오버튼 예제를 보여드립니다.</sub>
                 </h2>
-                <h2>SEARCH
-                    <sub>많이 안다고 장담할 순 없지만, 많이 알 수 있는 방법은 알고있다고 장담할 수 있습니다.</sub>
+                <h2>매력 
+                    <sub>웃음이 많고 밥도 잘먹고 싫다는 소리도 잘 안해서, 어디서든 적없이 두루두루 잘지냅니다.</sub>
                 </h2>
-                <h2>HEALTH
-                    <sub>7층까진 계단으로! 디테일은 체력에서 나옵니다. 끝날때까지 꼼꼼하려면 지치지 않아야 합니다</sub>
+                <h2>적응력
+                    <sub>아르바이트 8년, 직장생활 6년 다양한 경험과 긍정적 사고로 환경을 가리지 않고 편견없이 적응합니다.</sub>
                 </h2>
             </div>
         </div>
@@ -105,7 +105,7 @@
             <div class="secWrap" ng-controller="SlickController">
                 <slick class="secSlide" settings="slickConfig2">
                     <div class="slideItem" ng-repeat="dt in links | orderBy : '-'">
-                        <a href="{{dt.a}}" target="_blank" title="{{dt.t}}"><img src="assets/img/spo{{$index}}.png"></a>
+                        <a href="{{dt.a}}" target="_blank" title="{{dt.t}}"><img src="assets/img/spo{{dt.n}}.png"></a>
                         <div class="sItemTxt yr{{dt.y}}">
                             <h3>{{dt.t}}<sub>({{dt.y}})</sub></h3>
                             <h4>{{dt.i}}</h4>
@@ -118,7 +118,7 @@
             <h1 class="secTitle">About Me</h1>
             <div>
                 <h3>
-                    1985년생, 5년차, 장기 잘 둠<br/>
+                    1985년생, 6년차, 장기 잘 둠<br/>
                     좋은회사 = ["거리", "분위기", "가능성"];
                 </h3>
                 <h2>재미있게 일 하기</h2>
@@ -141,8 +141,8 @@
                 <span>UX/UI</span>
             </div>
             <div class="mailArea">
-                <h2>무교, 무담배, 무드셀라</h2>
-                <h4>E-mail : <a href="mailto:dev.grayt@gmail.com">3무 직원 <i class="fas fa-envelope"></i></a></h4>
+                <h2>무교, 무연, 무적, 무드셀라</h2>
+                <h4>E-mail : <a href="mailto:dev.grayt@gmail.com">6력 4무 인재 <i class="fas fa-envelope"></i></a></h4>
             </div>
         </div>
     </section>
