--- a/index.html
+++ b/index.html
@@ -1,150 +1,118 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>UIUIUIUI</title>
-    <meta name="title" content="포트폴리오">
-    <meta name="subject" content="포폴포폴">
-    <meta name="description" content="좋은회사 가고싶은 포트폴리오">
-    <meta name="keywords" content="퍼블리셔,프론트엔드">
-    <meta name="writer" content="Top">
-    <meta name="author" content="Top">
-    <meta name="robots" content="ALL">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="포트폴리오">
-    <meta property="og:description" content="좋은회사 가고싶은 포트폴리오">
-    <meta property="og:image" content="https://uitop.github.io/ui/assets/img/chrome.jpg">
-    <meta property="og:url" content="https://uitop.github.io/ui/">
-    <link rel="shortcut icon" href="./favicon.ico">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
-    <link rel="stylesheet" href="assets/css/rzslider.min.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <script src="//www.youtube.com/iframe_api"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.min.js"></script>
-    <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script src="assets/js/Chart.min.js"></script>
-    <script src="assets/js/angular-chart.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/angular-slick.min.js"></script>
-    <script src="assets/js/ko-kr.js"></script>
-    <script src="assets/js/default.js"></script>
-    <script src="assets/js/index.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>UIUIUIUI</title>
+	<meta name="title" content="포트폴리오">
+	<meta name="subject" content="포폴포폴">
+	<meta name="description" content="좋은회사 가고싶은 포트폴리오">
+	<meta name="keywords" content="퍼블리셔,프론트엔드">
+	<meta name="writer" content="Top">
+	<meta name="author" content="Top">
+	<meta name="robots" content="ALL">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="포트폴리오">
+	<meta property="og:description" content="좋은회사 가고싶은 포트폴리오">
+	<meta property="og:image" content="https://uitop.github.io/ui/assets/img/chrome.jpg">
+	<meta property="og:url" content="https://uitop.github.io/ui/">
+	<link rel="shortcut icon" href="./favicon.ico">
+	<link rel="stylesheet" href="assets/icon/css/all.min.css">
+	<link rel="stylesheet" href="assets/css/default.css">
+	<link rel="stylesheet" href="assets/css/slick.css">
+	<link rel="stylesheet" href="assets/css/slick-theme.css">
+	<link rel="stylesheet" href="assets/css/index.min.css">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+	<script src="/assets/js/default.js"></script>
+	<script src="/assets/js/main.js"></script>
+	<script src="assets/js/Chart.min.js"></script>
+	<script src="assets/js/slick.min.js"></script>
 </head>
-<body ng-app="myPortfolio" ng-controller="myPof">
-    <div class="video-background">
-        <div class="video-foreground">
-            
-        </div>
-    </div>
-    <header>
-        <div class="headWrap" ng-show="isCon > 0">
-            <ul class="menuList">
-                <li class="menuItems wd40"><a ng-click="isCon = 0" ng-show="isCon < 0">Intro</a></li>
-                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 1}" ng-click="goSec(1)">Skill</a></li>
-                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 2}" ng-click="goSec(2)">Portfolio</a></li>
-                <li class="menuItems wd20"><a ng-class="{onItem : isFcs == 3}" ng-click="goSec(3)">About</a></li>
-            </ul>            
-        </div>
-    </header>
-    <!-- <div class="opDiv">
-        <div class="textDiv wClr" ng-show="isCon == 0">
-            <h2 class="thsIsP">이것은 포트폴리오</h2>
-            <h2 class="thsIsP">This is a portfolio</h2>
-            <h2 class="thsIsP">これはポートフォリオ</h2>
-            <div class="btnArea isMo">
-                <a ng-click="isCon = 1" title="Scroll 형식 레이아웃">Scroll Ver</a>
-                <a ng-click="isCon = 2" title="layer tab 형식 레이아웃">Layer Ver</a>
-            </div>
-        </div>
-        <div class="btnArea isPc linkDiv" ng-show="isCon == 0">
-            <a ng-click="isCon = 1" title="Scroll 형식 레이아웃">Scroll Ver</a>
-            <a ng-click="isCon = 2" title="layer tab 형식 레이아웃">Layer Ver</a>
-        </div>
-    </div> -->
-    <footer ng-controller="footerArea">
-        <button type="button" id="kakao-link-btn" class="cursp"><img src="./assets/img/kakao_btn_small.png" alt="카카오톡 공유하기"></button>
-        <!-- <a href="https://www.youtube.com/watch?v=hYvNB0ucJM8" target="_blank" class="youClr" title="유튜브에서 보기"><i class="fab fa-youtube youClr"></i></a> -->
-        <a href="https://github.com/uitop/ui" target="_blank" class="wClr" title="소스보기"><i class="fab fa-github"></i></a>
-    </footer>
-    <section class="subArea" ng-show="isCon > 0">
-        <div class="subWrap" id="skWrap" ng-mouseover="isFcs = 1">
-            <h1 class="secTitle mgb0">Skill</h1>
-            <div ng-controller="radarCht" class="radarWrap">
-                <canvas id="radar" class="chart chart-radar" chart-data="data" chart-options="options" chart-labels="labels"></canvas>
-            </div>
-            <div class="radarWrap isSkTxt">
-                <h2>체력  
-                    <sub>취미는 관악산 정상에서 김밥먹기, 주1회 이상 8키로 런닝, 자전거 타기등 꾸준히 건강관리 합니다.</sub>
-                </h2>
-                <h2>지구력
-                    <sub>추가요청, 3차 추가요청, final 추가요청, 진짜 마지막 추가요청 끝날때까지 거침없이 작업합니다.</sub>
-                </h2>
-                <h2>실력 
-                    <sub>언젠가 javascript로 타임머신을 만들겠다는 각오로 코딩하고, 어떤 요청이던 답을 찾아 냅니다.</sub>
-                </h2>
-                <h2>이해력 
-                    <sub>체크박슨데 하나만 선택되게 해주세요 같은 요청이 들어오면 당황하지 않고 라디오버튼 예제를 보여드립니다.</sub>
-                </h2>
-                <h2>매력 
-                    <sub>웃음이 많고 밥도 잘먹고 싫다는 소리도 잘 안해서, 어디서든 적없이 두루두루 잘지냅니다.</sub>
-                </h2>
-                <h2>적응력
-                    <sub>아르바이트 8년, 직장생활 6년 다양한 경험과 긍정적 사고로 환경을 가리지 않고 편견없이 적응합니다.</sub>
-                </h2>
-            </div>
-        </div>
-        <div class="subWrap" id="pfWrap" ng-mouseover="isFcs = 2">
-            <h1 class="secTitle">Portfolio</h1>
-            <div class="secWrap" ng-controller="SlickController">
-                <slick class="secSlide" settings="slickConfig2">
-                    <div class="slideItem" ng-repeat="dt in links | orderBy : '-'">
-                        <a href="{{dt.a}}" target="_blank" title="{{dt.t}}"><img src="assets/img/spo{{dt.n}}.png"></a>
-                        <div class="sItemTxt yr{{dt.y}}">
-                            <h3>{{dt.t}}<sub>({{dt.y}})</sub></h3>
-                            <h4>{{dt.i}}</h4>
-                        </div>
-                    </div>
-                </slick>
-            </div>
-        </div>
-        <div class="subWrap" id="abWrap" ng-mouseover="isFcs = 3">
-            <h1 class="secTitle">About Me</h1>
-            <div>
-                <h3>
-                    1985년생, 6년차, 장기 잘 둠<br/>
-                    좋은회사 = ["거리", "분위기", "가능성"];
-                </h3>
-                <h2>재미있게 일 하기</h2>
-                <q>지치지 않아야 한다.</q><br/>
-                <q>작은 관심이 분위기를 바꾼다.</q><br/>
-                <q>미소는 셀프다.</q><br/>
-                <q>일이건 놀이건 잘하면 다 재미있다.</q><br/>
-                <q>문서는 보는사람 기준으로.</q><br/>
-                <q>출근은 10분전.</q><br/>
-                <p>All for one, One for all</p>
-            </div>
-            <div class="tagBox">
-                <span>javascript</span>
-                <span>react</span>
-                <span>angularJS</span>
-                <span>jquery</span>
-                <span>HTML</span>
-                <span>SASS</span>
-                <span>PHP</span>
-                <span>UX/UI</span>
-            </div>
-            <div class="mailArea">
-                <h2>무교, 무연, 무적, 무드셀라</h2>
-                <h4>E-mail : <a href="mailto:dev.grayt@gmail.com">6력 4무 인재 <i class="fas fa-envelope"></i></a></h4>
-            </div>
-        </div>
-    </section>
+<body>
+	<div class="intro">
+		<button class="go_btn">
+			<i class="fab fa-dev"></i> pol
+		</button>
+		<div class="bottom_text">
+			<span class="cl"></span>
+		</div>
+	</div>
+	<div class="wrap">
+		<section class="subArea">
+			<div class="subWrap" id="skWrap">
+				<h1 class="secTitle mgb0">Skill</h1>
+				<div class="radarWrap">
+					<canvas id="radar" class="chart chart-radar"></canvas>
+				</div>
+				<div class="radarWrap isSkTxt">
+					<h2>체력  
+						<sub>해 좋은날은 등산, 선선할땐 자전거, 마라톤10K 코스 최고기록 51분 출근할 때 생기 그대로 퇴근합니다.</sub>
+					</h2>
+					<h2>지구력
+						<sub>추가요청, 3차 추가요청, final 추가요청, 진짜 마지막 추가 요청 끝날 때까지 거침없이 작업합니다.</sub>
+					</h2>
+					<h2>실력 
+						<sub>언젠가 javascript로 타임머신을 만들겠다는 각오로 코딩하고, 어떤 요청이던 답을 찾아냅니다.</sub>
+					</h2>
+					<h2>이해력 
+						<sub>대화를 할 땐 서로의 의견을 교환하는 것을 넘어 상대의 마음을 파악할 때 좋은 결과가 있다고 생각합니다.</sub>
+					</h2>
+					<h2>매력 
+						<sub>웃음이 많고 밥도 잘먹고 싫다는 소리도 잘 안해서, 어디서든 적없이 두루두루 잘지냅니다.</sub>
+					</h2>
+					<h2>적응력
+						<sub>아르바이트 8년, 직장인 6년 다양한 경험과 긍정적 사고로 환경을 가리지 않고 편견없이 적응합니다.</sub>
+					</h2>
+				</div>
+			</div>
+			<div class="subWrap" id="pfWrap">
+				<h1 class="secTitle">Portfolio</h1>
+				<div class="secWrap">
+					<div class="secSlide"></div>
+				</div>
+			</div>
+			<div class="subWrap" id="abWrap">
+				<h1 class="secTitle">About Me</h1>
+				<div>
+					<h3>
+						1985년생, 6년차, 장기 잘 둠<br/>
+						좋은회사 = ["거리", "분위기", "가능성"];
+					</h3>
+					<h2>재미있게 일 하기</h2>
+					<q>지치지 않아야 한다.</q><br/>
+					<q>작은 관심이 분위기를 바꾼다.</q><br/>
+					<q>미소는 셀프다.</q><br/>
+					<q>일이건 놀이건 잘하면 다 재미있다.</q><br/>
+					<q>문서는 보는사람 기준으로.</q><br/>
+					<q>출근은 10분전.</q><br/>
+					<p>All for one, One for all</p>
+				</div>
+				<div class="tagBox">
+					<span>javascript</span>
+					<span>react</span>
+					<span>angularJS</span>
+					<span>jquery</span>
+					<span>HTML</span>
+					<span>SCSS</span>
+					<span>PHP</span>
+					<span>UX/UI</span>
+				</div>
+				<div class="mailArea">
+					<h2>무교, 무연, 무적, 무드셀라</h2>
+					<h4>E-mail : <a href="mailto:dev.grayt@gmail.com">6력 4무 인재 <i class="fas fa-envelope"></i></a></h4>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="footer_btns">
+				<button type="button" id="go_intro" class="lf"><i class="fas fa-arrow-left wClr"></i></button>
+				<button type="button" id="go_top" class="lf"><i class="fas fa-arrow-up wClr"></i></button>
+				<button type="button" id="kakao-link-btn"><img src="./assets/img/kakao_btn_small.png" alt="카카오톡 공유하기"></button>
+				<a href="https://github.com/uitop/ui" target="_blank" class="wClr" title="소스보기"><i class="fab fa-github"></i></a>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
