--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<link rel="stylesheet" href="assets/css/index.min.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
-	<script src="/assets/js/default.js"></script>
-	<script src="/assets/js/main.js"></script>
+	<script src="assets/js/default.js"></script>
+	<script src="assets/js/main.js"></script>
 	<script src="assets/js/Chart.min.js"></script>
 	<script src="assets/js/slick.min.js"></script>
 </head>
