안쓰는 코드 제거

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="subject" content="포폴포폴">
 	<meta name="description" content="좋은회사 가고싶은 포트폴리오">
 	<meta name="keywords" content="퍼블리셔,프론트엔드">
-	<meta name="writer" content="Top">
-	<meta name="author" content="Top">
+	<meta name="writer" content="commonJS">
+	<meta name="author" content="commonJS">
 	<meta name="robots" content="ALL">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="포트폴리오">
@@ -25,7 +25,6 @@
 	<link rel="stylesheet" href="assets/css/index.min.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
-	<script src="assets/js/default.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/Chart.min.js"></script>
 	<script src="assets/js/slick.min.js"></script>
@@ -63,7 +62,7 @@
 						<sub>웃음이 많고 밥도 잘먹고 싫다는 소리도 잘 안해서, 어디서든 적없이 두루두루 잘지냅니다.</sub>
 					</h2>
 					<h2>적응력
-						<sub>아르바이트 8년, 직장인 6년 다양한 경험과 긍정적 사고로 환경을 가리지 않고 편견없이 적응합니다.</sub>
+						<sub>아르바이트 9년, Web 6년 다양한 경험과 긍정적 사고로 환경을 가리지 않고 편견없이 적응합니다.</sub>
 					</h2>
 				</div>
 			</div>
@@ -77,7 +76,7 @@
 				<h1 class="secTitle">About Me</h1>
 				<div>
 					<h3>
-						1985년생, 6년차, 장기 잘 둠<br/>
+						1985년생, 6년차, 장기 7급<br/>
 						좋은회사 = ["거리", "분위기", "가능성"];
 					</h3>
 					<h2>재미있게 일 하기</h2>
