--- a/index.html
+++ b/index.html
@@ -48,37 +48,37 @@
 						<h3>
 							STR <sup>근력</sup>
 						</h3>
-						<h6>체력관리 덕에 다리는 튼튼해서 사무실 이동/이사에 최적화됨</h6>
+						<h6>3대 측정불가(해본적없음)</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
 							DEX <sup>재주</sup>
 						</h3>
-						<h6>오랜 알바와 자취로 잡재주가 많음</h6>
+						<h6>손재주만 자신없음</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
 							CON <sup>체력</sup>
 						</h3>
-						<h6>10K런닝, 등산, 자전거 라이딩 실외레저를 통해 지치지 않는 체력을 유지</h6>
+						<h6>10km 50분, 청계산 원터골 -> 옥녀봉 40분 주파</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
 							INT <sup>지능</sup>
 						</h3>
-						<h6>단기기억력과 이해력이 좋아 학습능력도 좋고 두번설명 안해도됨</h6>
+						<h6>IQ검사 해본적없지만 퍼즐 잘품</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
 							WIS <sup>지혜</sup>
 						</h3> 
-						<h6>보드게임으로 단련된 두뇌회전으로 묘수를 잘 찾아냄</h6>
+						<h6>예능,드라마,영화 많이 봐서 풍부한 잡지식</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
 							CHA <sup>매력</sup>
 						</h3> 
-						<h6>재치,겸손,웃상 삼박자로 나 싫다는 사람 본적없음</h6>
+						<h6>샤워후 거울보면 1분 자아도취</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
@@ -98,7 +98,7 @@
 				<h1 class="secTitle">Portfolio</h1>
 				<div class="secWrap">
 					<div class="secSlide"></div>
-					<span class="slide_cnt"> / 14</span>
+					<span class="slide_cnt"> / 19</span>
 				</div>
 			</div>
 			<div class="subWrap" id="abWrap">
