feat : 잘못적용된부분 수정

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<h3>
 							WIS <sup>지혜</sup>
 						</h3> 
-						<h6>예능,드라마,영화 많이 봐서 풍부한 잡지식</h6>
+						<h6>예능,드라마,영화 폭풍시청으로 습득한 풍부한 생활지식</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
