포트폴리오 업데이트

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h3>
 							CON <sup>체력</sup>
 						</h3>
-						<h6>10km 50분, 청계산 원터골 -> 옥녀봉 40분 주파</h6>
+						<h6>런닝 10km 50분</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
@@ -72,7 +72,7 @@
 						<h3>
 							WIS <sup>지혜</sup>
 						</h3> 
-						<h6>예능,드라마,영화 폭풍시청으로 습득한 풍부한 생활지식</h6>
+						<h6>예능,드라마,영화등 간접경험으로 습득한 풍부한 생활지식</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
@@ -84,7 +84,7 @@
 						<h3>
 							LUK <sup>운</sup>
 						</h3>
-						<h6>무엇하나 쉽게 이룬게 없지만 '내 팔자 좋은 팔자' 라고 긍정회로 가동</h6>
+						<h6>생각을 럭키비키적으로 함</h6>
 					</div>
 					<div class="radar__text">
 						<h3>
